--- a/frontend/src/assets/Layout.css
+++ b/frontend/src/assets/Layout.css
@@ -7,3 +7,8 @@
   background-color: #c0c0c0; /* Change the background color on click */
   color: #555; /* Change the text color on click */
 }
+
+.nav-link.text-dark.active {
+  background-color: #e0e0e0;
+  color: #333;
+}
